force-app/main/default/objects/Course__c/fields/Assingment_in_PSA__c.field-meta.xml
<CustomField>
    <fullName>Assingment_in_PSA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Assingment has been automatically created in PSA</inlineHelpText>
    <label>Assingment in PSA</label>
    <type>Checkbox</type>
</CustomField>