force-app/main/default/objects/Course__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <description>Rating field depending on number of Attendants to the course</description>
    <formula>IF(  Number_of_Attendants__c  &gt; 5 , IMAGE(&quot;/servlet/servlet.FileDownload?file=0151p000005NslT&quot;,&quot;high&quot;), 

( IF(Number_of_Attendants__c  &lt; 3, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151p000005Nsld&quot;,&quot;low&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0151p000005Nsli&quot;,&quot;med&quot;))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance</label>
    <type>Text</type>
</CustomField>