force-app/main/default/objects/Course__c/fields/Course_days__c.field-meta.xml
<CustomField>
    <fullName>Course_days__c</fullName>
    <formula>(Ending_Date__c  -  Start_Date__c) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>