force-app/main/default/objects/Course__c/fields/Course_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Course_Documentation__c</fullName>
    <formula>HYPERLINK (Course_Product__r.Course_Documentation__c,&quot;Acceso a la carpeta con la documentación&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Documentation</label>
    <type>Text</type>
</CustomField>