force-app/main/default/objects/Course__c/fields/Course_Exams__c.field-meta.xml
<CustomField>
    <fullName>Course_Exams__c</fullName>
    <formula>HYPERLINK(Course_Product__r.Course_Exams__c, &quot;Acceso a la carpeta con preguntas de examen&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Exams</label>
    <type>Text</type>
</CustomField>