force-app/main/default/objects/Course__c/fields/Course_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Course_Instructor__c</fullName>
    <description>Para utilizar en calendario, para que sea más visual la persona que imparte el curso</description>
    <formula>Name  &amp; &quot; - &quot;  &amp;  Instructor__r.User_Acronym__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course + Instructor</label>
    <type>Text</type>
</CustomField>