force-app/main/default/objects/Course__c/fields/Course_Product__c.field-meta.xml
<CustomField>
    <fullName>Course_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship from Course record to Course Product</description>
    <inlineHelpText>Select the course product of your course. This is needed to populate the links to the Documentation and exams folders.</inlineHelpText>
    <label>Course Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Product2.Family</field>
            <operation>contains</operation>
            <value>Training</value>
        </filterItems>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>