force-app/main/default/objects/Course__c/fields/Course_Questionnaire_FUNDAE__c.field-meta.xml
<CustomField>
    <fullName>Course_Questionnaire_FUNDAE__c</fullName>
    <formula>HYPERLINK(Course_Product__r.Course_Questionnaire_FUNDAE__c, &quot;Acceso al cuestionario para FUNDAE&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Questionnaire (FUNDAE)</label>
    <type>Text</type>
</CustomField>