force-app/main/default/objects/Course__c/fields/Course_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Course_Revenue__c</fullName>
    <label>Course Revenue</label>
    <summarizedField>Course_Attendance__c.Amount_to_invoice__c</summarizedField>
    <summaryForeignKey>Course_Attendance__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>