force-app/main/default/objects/Course__c/fields/Course_Subject__c.field-meta.xml
<CustomField>
    <fullName>Course_Subject__c</fullName>
    <label>Course Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AWS - Amazon Web Services Fundamentals</fullName>
            </value>
            <value>
                <fullName>Bootcamp Associate</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Datorama</fullName>
            </value>
            <value>
                <fullName>Einstein Recommendations</fullName>
            </value>
            <value>
                <fullName>Ejercicio Práctico Salesforce</fullName>
            </value>
            <value>
                <fullName>Financial Services Cloud</fullName>
            </value>
            <value>
                <fullName>Google Cloud</fullName>
            </value>
            <value>
                <fullName>Google Professional Cloud Architect</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Lightning Components</fullName>
                <isActive>false</isActive>
                <label>Lightning Aura Components (Deprecated)</label>
            </value>
            <value>
                <fullName>Lightning Web Component</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud AMPscript</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Connect</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Developer</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Email</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Email + Admin</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Personalization</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Social</fullName>
            </value>
            <value>
                <fullName>Pardot Consultant</fullName>
            </value>
            <value>
                <fullName>Pardot Specialist</fullName>
            </value>
            <value>
                <fullName>Sales Cloud Implementation</fullName>
            </value>
            <value>
                <fullName>Salesforce ADM and DEV Practice</fullName>
            </value>
            <value>
                <fullName>Salesforce Administration</fullName>
            </value>
            <value>
                <fullName>Salesforce Advanced Administration</fullName>
            </value>
            <value>
                <fullName>B2B Commerce Admin</fullName>
                <label>Salesforce B2B Commerce Admin</label>
            </value>
            <value>
                <fullName>B2B Commerce Dev</fullName>
                <label>Salesforce B2B Commerce Dev</label>
            </value>
            <value>
                <fullName>Salesforce Community Cloud</fullName>
            </value>
            <value>
                <fullName>SF Data Architecture</fullName>
                <label>Salesforce Data Architecture and Management Designer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>