force-app/main/default/objects/Course__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calendar Course</fullName>
            </value>
            <value>
                <fullName>Customer Ad hoc</fullName>
            </value>
            <value>
                <fullName>ISDI Trailhead</fullName>
            </value>
            <value>
                <fullName>ISDI Hands-on</fullName>
            </value>
            <value>
                <fullName>Cert Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>