force-app/main/default/objects/Course__c/fields/Create_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Create_Assignment__c</fullName>
    <formula>NOT(ISBLANK( Instructor__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Assignment</label>
    <type>Checkbox</type>
</CustomField>