force-app/main/default/objects/Course__c/fields/Create_Project__c.field-meta.xml
<CustomField>
    <fullName>Create_Project__c</fullName>
    <formula>IF( 
CASE(Status__c ,
&quot;Not Assigned&quot;, &quot;True&quot;,
&quot;Open&quot;, &quot;True&quot;,
&quot;Confirmed&quot; , &quot;True&quot;,
&quot;false&quot;)
= &quot;True&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Project</label>
    <type>Checkbox</type>
</CustomField>