force-app/main/default/objects/Course__c/fields/Event_Id_Wordpress__c.field-meta.xml
<CustomField>
    <fullName>Event_Id_Wordpress__c</fullName>
    <externalId>true</externalId>
    <label>Event Id Wordpress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>