force-app/main/default/objects/Course__c/fields/In_Person_Students__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Students__c</fullName>
    <formula>Number_of_Attendants__c  - 
	 Number_of_remote_Attendants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Person Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>