force-app/main/default/objects/Course__c/fields/In_PSA__c.field-meta.xml
<CustomField>
    <fullName>In_PSA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Training project has been automatically created in PSA</inlineHelpText>
    <label>Project In PSA</label>
    <type>Checkbox</type>
</CustomField>