force-app/main/default/objects/Course__c/fields/Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check it when this course has been invoiced entirely.</inlineHelpText>
    <label>Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>