force-app/main/default/objects/Course__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Coachers Madrid</fullName>
            </value>
            <value>
                <fullName>Customer Office</fullName>
            </value>
            <value>
                <fullName>Virtual Training</fullName>
            </value>
            <value>
                <fullName>Other Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>