force-app/main/default/objects/Course__c/fields/Location_Address_DELETE__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_DELETE__c</fullName>
    <label>Location Address_DELETE</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>