force-app/main/default/objects/Course__c/fields/Location_Information_DELETE__c.field-meta.xml
<CustomField>
    <fullName>Location_Information_DELETE__c</fullName>
    <label>Location Information_DELETE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>