force-app/main/default/objects/Course__c/fields/Number_of_Attendants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendants__c</fullName>
    <description>Number of enrolled students to this course</description>
    <label>Total Students</label>
    <summaryForeignKey>Course_Attendance__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>