force-app/main/default/objects/Course__c/fields/Number_of_remote_Attendants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_remote_Attendants__c</fullName>
    <label>Remote Students</label>
    <summaryFilterItems>
        <field>Course_Attendance__c.Remotely__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Attendance__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>