force-app/main/default/objects/Course__c/fields/Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This account does not have this opportunity</errorMessage>
        <filterItems>
            <field>Opportunity.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Courses from this Opportunity</relationshipLabel>
    <relationshipName>Courses_from_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>