force-app/main/default/objects/Course__c/fields/Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours__c</fullName>
    <formula>Course_Product__r.Course_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>