force-app/main/default/objects/Course__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9:00h - 12:00h</fullName>
            </value>
            <value>
                <fullName>9:00h - 13:00h</fullName>
            </value>
            <value>
                <fullName>9:00h - 14:00h</fullName>
            </value>
            <value>
                <fullName>9:00h - 15:00h</fullName>
                <default>true</default>
                <label>9:00h - 15:00h</label>
            </value>
            <value>
                <fullName>9:00h - 16:00h</fullName>
            </value>
            <value>
                <fullName>9:00h - 17:00h</fullName>
            </value>
            <value>
                <fullName>9:00h - 18:00h</fullName>
            </value>
            <value>
                <fullName>10:00h - 14:00h</fullName>
            </value>
            <value>
                <fullName>10:00h - 15:30h</fullName>
            </value>
            <value>
                <fullName>10:00h - 14:30h</fullName>
            </value>
            <value>
                <fullName>13.00h - 16.00h</fullName>
            </value>
            <value>
                <fullName>14:00 - 18:00h</fullName>
            </value>
            <value>
                <fullName>14:00h - 20:00h</fullName>
            </value>
            <value>
                <fullName>14.30h - 18.30h</fullName>
            </value>
            <value>
                <fullName>15:00h - 18.45h</fullName>
            </value>
            <value>
                <fullName>15:00h - 19:00h</fullName>
            </value>
            <value>
                <fullName>15:00h - 20:00h</fullName>
            </value>
            <value>
                <fullName>15:00h - 21:00h</fullName>
            </value>
            <value>
                <fullName>15:30h - 18:30h</fullName>
            </value>
            <value>
                <fullName>15:30h - 19:00h</fullName>
            </value>
            <value>
                <fullName>15:30h - 19:15h</fullName>
            </value>
            <value>
                <fullName>16:00h - 18:00h</fullName>
            </value>
            <value>
                <fullName>16:00h - 19:00h</fullName>
            </value>
            <value>
                <fullName>16:00h - 20:00h</fullName>
            </value>
            <value>
                <fullName>16:30h - 20:30h</fullName>
            </value>
            <value>
                <fullName>17:00h - 19:00h</fullName>
            </value>
            <value>
                <fullName>17:00h - 20:00h</fullName>
            </value>
            <value>
                <fullName>17:00h - 20:30h</fullName>
            </value>
            <value>
                <fullName>17:00h - 21:00h</fullName>
            </value>
            <value>
                <fullName>17:00h - 22:00h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>