force-app/main/default/objects/Course__c/fields/SendWebCalendar__c.field-meta.xml
<CustomField>
    <fullName>SendWebCalendar__c</fullName>
    <formula>ISPICKVAL(Course_Type__c, &apos;Calendar Course&apos;) || NOT(ISBLANK(Event_Id_Wordpress__c))</formula>
    <label>Send Web Calendar</label>
    <type>Checkbox</type>
</CustomField>