force-app/main/default/objects/Course__c/fields/Training_Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Training_Flat_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Flat Rate</label>
    <referenceTo>Training_Flat_Rate__c</referenceTo>
    <relationshipLabel>Exclusive Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>