force-app/main/default/objects/Course__c/fields/URL_Documentation__c.field-meta.xml
<CustomField>
    <fullName>URL_Documentation__c</fullName>
    <formula>Course_Product__r.Course_Documentation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Documentation</label>
    <type>Text</type>
</CustomField>