force-app/main/default/objects/Course__c/fields/URL_Exams__c.field-meta.xml
<CustomField>
    <fullName>URL_Exams__c</fullName>
    <formula>Course_Product__r.Course_Exams__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Exams</label>
    <type>Text</type>
</CustomField>