force-app/main/default/objects/Course__c/fields/Web_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Description__c</fullName>
    <label>Web_Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>