force-app/main/default/objects/Course__c/fields/Webex__c.field-meta.xml
<CustomField>
    <fullName>Webex__c</fullName>
    <inlineHelpText>Paste here the Meet, Zoom or Webex meeting link.</inlineHelpText>
    <label>Webex</label>
    <type>Url</type>
</CustomField>