force-app/main/default/objects/Course__c/fields/Wordpress_Integration_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Wordpress_Integration_Error_Message__c</fullName>
    <label>Wordpress Integration Error_Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>