force-app/main/default/objects/Course__c/fields/Wordpress_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Wordpress_Integration_Status__c</fullName>
    <label>Wordpress Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Resend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>