force-app/main/default/objects/Course__c/fields/Wordpress_Last_Synchronization__c.field-meta.xml
<CustomField>
    <fullName>Wordpress_Last_Synchronization__c</fullName>
    <label>Wordpress Last Synchronization</label>
    <type>DateTime</type>
</CustomField>