force-app/main/default/objects/Course__c/recordTypes/Cert_Session.recordType-meta.xml
<RecordType>
    <fullName>Cert_Session</fullName>
    <active>true</active>
    <description>Sesión de Certificación</description>
    <label>Cert Session</label>
</RecordType>