force-app/main/default/objects/Course__c/validationRules/Confirmado_sin_link_con_alumnos_remotos.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirmado_sin_link_con_alumnos_remotos</fullName>
    <active>true</active>
    <description>No se puede confirmar un curso si no hay link de webex y tiene alumnos remotos</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Confirmed&quot;) &amp;&amp; ISBLANK(Webex__c) &amp;&amp;  Number_of_remote_Attendants__c &gt;0</errorConditionFormula>
    <errorMessage>WebEx Link have been filled if course has remote attendances</errorMessage>
</ValidationRule>