force-app/main/default/objects/Course__c/validationRules/Curso_confirmado_sin_Instructor.validationRule-meta.xml
<ValidationRule>
    <fullName>Curso_confirmado_sin_Instructor</fullName>
    <active>true</active>
    <description>No se puede confirmar un curso si no tiene Instructor asignado</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Confirmed&quot;)   &amp;&amp;   (  ISBLANK(  Instructor__c  ))</errorConditionFormula>
    <errorDisplayField>Instructor__c</errorDisplayField>
    <errorMessage>A course cannot be confirmed if no Instructor has been selected</errorMessage>
</ValidationRule>