force-app/main/default/objects/Course__c/validationRules/Curso_confirmado_sin_product.validationRule-meta.xml
<ValidationRule>
    <fullName>Curso_confirmado_sin_product</fullName>
    <active>true</active>
    <description>No se puede confirmar un curso si no está seleccionado el Producto del curso</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Confirmed&quot;)   &amp;&amp;   (  ISBLANK(  Course_Product__c ) )</errorConditionFormula>
    <errorDisplayField>Course_Product__c</errorDisplayField>
    <errorMessage>You need to select the course product for this course.</errorMessage>
</ValidationRule>