force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Sent__c</columns>
    <columns>Course_Product__c</columns>
    <columns>Instructor__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Ending_Date__c</columns>
    <columns>Course_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>