force-app/main/default/objects/Course__c/listViews/BasicQueueAmazon_Course.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_Course</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>