force-app/main/default/objects/Course__c/listViews/Calendar_Courses.listView-meta.xml
<ListView>
    <fullName>Calendar_Courses</fullName>
    <booleanFilter>1 AND (2 OR 4) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Course_Revenue__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Ending_Date__c</columns>
    <columns>Course_Product__c</columns>
    <columns>Instructor__c</columns>
    <columns>Attendance__c</columns>
    <columns>Number_of_Attendants__c</columns>
    <columns>Wordpress_Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Type__c</field>
        <operation>equals</operation>
        <value>Calendar Course</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not assigned,Open,Confirmed,Registration Closed,Finished</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_YEAR</value>
    </filters>
    <label>Calendar Courses</label>
</ListView>