force-app/main/default/objects/Course__c/listViews/Calendar_Courses_Web_Integration_Error.listView-meta.xml
<ListView>
    <fullName>Calendar_Courses_Web_Integration_Error</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Course_Product__c</columns>
    <columns>Instructor__c</columns>
    <columns>Attendance__c</columns>
    <columns>Number_of_Attendants__c</columns>
    <columns>Wordpress_Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Type__c</field>
        <operation>equals</operation>
        <value>Calendar Course</value>
    </filters>
    <filters>
        <field>Wordpress_Integration_Status__c</field>
        <operation>equals</operation>
        <value>Error,Resend</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Course__c.Course</value>
    </filters>
    <label>Calendar Courses Web Integration Error</label>
</ListView>