force-app/main/default/objects/Course__c/listViews/Cert_Sessions.listView-meta.xml
<ListView>
    <fullName>Cert_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Instructor__c</columns>
    <columns>Course_Subject__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Webex__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Course__c.Cert_Session</value>
    </filters>
    <label>Cert Sessions</label>
</ListView>