force-app/main/default/objects/Course__c/listViews/Confirmed_Courses.listView-meta.xml
<ListView>
    <fullName>Confirmed_Courses</fullName>
    <columns>NAME</columns>
    <columns>Course_Type__c</columns>
    <columns>Contact__c</columns>
    <columns>Course_Subject__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Number_of_Attendants__c</columns>
    <columns>Attendance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Confirmed,Finished</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Confirmed Courses</label>
</ListView>