force-app/main/default/objects/Course__c/listViews/Cursos_Presenciales.listView-meta.xml
<ListView>
    <fullName>Cursos_Presenciales</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Ending_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Confirmed</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Cloud Coachers Madrid</value>
    </filters>
    <filters>
        <field>In_Person_Students__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <label>Cursos Presenciales</label>
</ListView>